avoid breaking sidebar on mobile

--- a/styles/gitlab/catppuccin.user.css
+++ b/styles/gitlab/catppuccin.user.css
@@ -255,7 +255,7 @@
     }
 
     .super-sidebar {
-      --super-sidebar-bg: none;
+      --super-sidebar-bg: @base;
       --super-sidebar-border-color: @surface0;
       --super-sidebar-user-bar-bg: @surface0;
       --super-sidebar-user-bar-button-bg: @base;
@@ -264,6 +264,10 @@
       --super-sidebar-user-bar-button-active-bg: @surface2;
       --super-sidebar-nav-item-hover-bg: @surface0;
       --super-sidebar-nav-item-active-bg: @surface0;
+    }
+
+    .super-sidebar-nav-item > .gl-text-right {
+      z-index: 1;
     }
 
     .gl-new-dropdown .gl-new-dropdown-panel,
@@ -401,7 +405,6 @@
 
     .gl-filtered-search-token.gl-filtered-search-token-hover:hover,
     .gl-filtered-search-token-operator,
-    .gl-filtered-search-token.gl-filtered-search-token-hover:hover,
     .gl-filtered-search-token-data {
       background-color: @surface2;
     }
